--- a/pages/admin/admin_dashboard.html
+++ b/pages/admin/admin_dashboard.html
@@ -246,7 +246,7 @@
                                 <td class="px-6 py-4 whitespace-nowrap">
                                     <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-warning-100 text-warning-600">Preparing</span>
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$24.99</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?24.99</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">15 min</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                     <button class="text-primary hover:text-primary-600 transition-smooth">View Details</button>
@@ -270,7 +270,7 @@
                                 <td class="px-6 py-4 whitespace-nowrap">
                                     <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-success-100 text-success-600">Ready</span>
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$18.50</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?18.50</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">5 min</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                     <button class="text-primary hover:text-primary-600 transition-smooth">View Details</button>
@@ -294,7 +294,7 @@
                                 <td class="px-6 py-4 whitespace-nowrap">
                                     <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-primary-100 text-primary-600">Pending</span>
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$32.75</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?32.75</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">25 min</td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                     <button class="text-primary hover:text-primary-600 transition-smooth">View Details</button>
@@ -322,7 +322,7 @@
                             </div>
                             <div class="flex justify-between items-center text-sm">
                                 <span class="text-text-secondary">Sarah Johnson</span>
-                                <span class="font-medium text-text-primary">$24.99</span>
+                                <span class="font-medium text-text-primary">?24.99</span>
                             </div>
                             <div class="flex justify-between items-center mt-2">
                                 <span class="text-xs text-text-secondary">ETA: 15 min</span>
@@ -345,7 +345,7 @@
                             </div>
                             <div class="flex justify-between items-center text-sm">
                                 <span class="text-text-secondary">Mike Chen</span>
-                                <span class="font-medium text-text-primary">$18.50</span>
+                                <span class="font-medium text-text-primary">?18.50</span>
                             </div>
                             <div class="flex justify-between items-center mt-2">
                                 <span class="text-xs text-text-secondary">ETA: 5 min</span>
@@ -453,11 +453,11 @@
                         
                         <!-- Y-axis Labels -->
                         <g fill="#718096" font-size="10" text-anchor="end">
-                            <text x="45" y="185">$0</text>
-                            <text x="45" y="145">$25K</text>
-                            <text x="45" y="105">$50K</text>
-                            <text x="45" y="65">$75K</text>
-                            <text x="45" y="25">$100K</text>
+                            <text x="45" y="185">?0</text>
+                            <text x="45" y="145">?25K</text>
+                            <text x="45" y="105">?50K</text>
+                            <text x="45" y="65">?75K</text>
+                            <text x="45" y="25">?100K</text>
                         </g>
                     </svg>
                 </div>
