--- a/pages/admin/admin_orders.html
+++ b/pages/admin/admin_orders.html
@@ -115,7 +115,7 @@
                 <div class="flex items-center justify-between">
                     <div>
                         <p class="text-text-secondary text-sm font-medium">Avg Order Value</p>
-                        <p class="text-2xl font-bold text-text-primary mt-1">$24.50</p>
+                        <p class="text-2xl font-bold text-text-primary mt-1">?24.50</p>
                         <div class="flex items-center mt-2">
                             <svg class="w-4 h-4 text-success mr-1" fill="currentColor" viewBox="0 0 20 20">
                                 <path fill-rule="evenodd" d="M5.293 9.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 7.414V15a1 1 0 11-2 0V7.414L6.707 9.707a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
@@ -209,7 +209,7 @@
                             <td class="px-6 py-4 whitespace-nowrap">
                                 <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-warning-100 text-warning-600">Preparing</span>
                             </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$24.99</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?24.99</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">2:45 PM</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                 <div class="flex gap-2">
@@ -233,7 +233,7 @@
                             <td class="px-6 py-4 whitespace-nowrap">
                                 <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-success-100 text-success-600">Ready</span>
                             </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$18.50</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?18.50</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">2:30 PM</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                 <div class="flex gap-2">
@@ -257,7 +257,7 @@
                             <td class="px-6 py-4 whitespace-nowrap">
                                 <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-primary-100 text-primary-600">Pending</span>
                             </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$32.75</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?32.75</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">2:15 PM</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                 <div class="flex gap-2">
@@ -281,7 +281,7 @@
                             <td class="px-6 py-4 whitespace-nowrap">
                                 <span class="inline-flex px-2 py-1 text-xs font-semibold rounded-full bg-error-100 text-error-600">Disputed</span>
                             </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">$15.25</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-sm text-text-primary font-medium">?15.25</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm text-text-secondary">1:45 PM</td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                                 <div class="flex gap-2">
