--- a/pages/delivery/rider_dashboard.html
+++ b/pages/delivery/rider_dashboard.html
@@ -108,7 +108,7 @@
                 <div class="flex items-center justify-between">
                     <div>
                         <p class="text-text-secondary text-sm font-medium">Today's Earnings</p>
-                        <p class="text-2xl font-bold text-text-primary mt-1">$142.50</p>
+                        <p class="text-2xl font-bold text-text-primary mt-1">?142.50</p>
                         <div class="flex items-center mt-2">
                             <svg class="w-4 h-4 text-success mr-1" fill="currentColor" viewBox="0 0 20 20">
                                 <path fill-rule="evenodd" d="M5.293 9.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 7.414V15a1 1 0 11-2 0V7.414L6.707 9.707a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
@@ -261,7 +261,7 @@
                                 </div>
 
                                 <div class="flex items-center justify-between text-sm">
-                                    <span class="font-medium text-text-primary">Earnings: $8.50</span>
+                                    <span class="font-medium text-text-primary">Earnings: ?8.50</span>
                                     <span class="text-text-secondary">Est. Delivery: 25 min</span>
                                 </div>
                             </div>
@@ -307,7 +307,7 @@
                                 </div>
 
                                 <div class="flex items-center justify-between text-sm">
-                                    <span class="font-medium text-text-primary">Earnings: $7.25</span>
+                                    <span class="font-medium text-text-primary">Earnings: ?7.25</span>
                                     <span class="text-text-secondary">Delivery Time: 12 min remaining</span>
                                 </div>
                             </div>
@@ -353,7 +353,7 @@
                                 </div>
 
                                 <div class="flex items-center justify-between text-sm">
-                                    <span class="font-medium text-text-primary">Earnings: $9.75</span>
+                                    <span class="font-medium text-text-primary">Earnings: ?9.75</span>
                                     <span class="text-success text-sm font-medium">Delivered at 2:42 PM</span>
                                 </div>
                             </div>
@@ -441,7 +441,7 @@
                             </div>
                         </div>
                         <div class="text-right">
-                            <p class="font-medium text-text-primary">$5.00</p>
+                            <p class="font-medium text-text-primary">?5.00</p>
                             <p class="text-sm text-success">75% of earnings</p>
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                             </div>
                         </div>
                         <div class="text-right">
-                            <p class="font-medium text-text-primary">$1.50</p>
+                            <p class="font-medium text-text-primary">?1.50</p>
                             <p class="text-sm text-success">15% of earnings</p>
                         </div>
                     </div>
@@ -469,7 +469,7 @@
                             </div>
                         </div>
                         <div class="text-right">
-                            <p class="font-medium text-text-primary">$2.00</p>
+                            <p class="font-medium text-text-primary">?2.00</p>
                             <p class="text-sm text-success">10% of earnings</p>
                         </div>
                     </div>
@@ -481,7 +481,7 @@
                                 <p class="text-sm text-text-secondary">18 deliveries completed</p>
                             </div>
                             <div class="text-right">
-                                <p class="text-2xl font-bold text-primary">$142.50</p>
+                                <p class="text-2xl font-bold text-primary">?142.50</p>
                                 <p class="text-sm text-success">+18.5% vs yesterday</p>
                             </div>
                         </div>
