--- a/pages/delivery/rider_profile.html
+++ b/pages/delivery/rider_profile.html
@@ -188,15 +188,15 @@ United States</textarea>
                     <h3 class="text-lg font-semibold text-text-primary mb-4">Earnings Overview</h3>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
                         <div class="text-center">
-                            <p class="text-2xl font-bold text-primary">$1,247.50</p>
+                            <p class="text-2xl font-bold text-primary">?1,247.50</p>
                             <p class="text-sm text-text-secondary">This Week</p>
                         </div>
                         <div class="text-center">
-                            <p class="text-2xl font-bold text-secondary">$4,890.25</p>
+                            <p class="text-2xl font-bold text-secondary">?4,890.25</p>
                             <p class="text-sm text-text-secondary">This Month</p>
                         </div>
                         <div class="text-center">
-                            <p class="text-2xl font-bold text-accent">$18,450.00</p>
+                            <p class="text-2xl font-bold text-accent">?18,450.00</p>
                             <p class="text-sm text-text-secondary">Total Earnings</p>
                         </div>
                     </div>
@@ -208,21 +208,21 @@ United States</textarea>
                                     <p class="font-medium text-text-primary">Order #ORD-2024-045</p>
                                     <p class="text-sm text-text-secondary">Today, 2:45 PM</p>
                                 </div>
-                                <span class="font-medium text-success">+$8.50</span>
+                                <span class="font-medium text-success">+?8.50</span>
                             </div>
                             <div class="flex justify-between items-center py-2 border-b border-border">
                                 <div>
                                     <p class="font-medium text-text-primary">Order #ORD-2024-044</p>
                                     <p class="text-sm text-text-secondary">Today, 2:30 PM</p>
                                 </div>
-                                <span class="font-medium text-success">+$7.25</span>
+                                <span class="font-medium text-success">+?7.25</span>
                             </div>
                             <div class="flex justify-between items-center py-2 border-b border-border">
                                 <div>
                                     <p class="font-medium text-text-primary">Order #ORD-2024-043</p>
                                     <p class="text-sm text-text-secondary">Today, 2:15 PM</p>
                                 </div>
-                                <span class="font-medium text-success">+$9.75</span>
+                                <span class="font-medium text-success">+?9.75</span>
                             </div>
                         </div>
                         <button class="text-primary hover:text-primary-600 transition-smooth">View Full Earnings History</button>
