--- a/pages/restaurants/restaurant_browse.html
+++ b/pages/restaurants/restaurant_browse.html
@@ -136,10 +136,10 @@
                         <div class="flex items-center space-x-3">
                             <span class="text-sm font-medium text-text-primary">Price:</span>
                             <div class="flex space-x-1">
-                                <button class="px-2 py-1 text-sm bg-primary text-white rounded hover:bg-primary-600 transition-smooth">$</button>
-                                <button class="px-2 py-1 text-sm bg-gray-100 text-text-secondary rounded hover:bg-primary hover:text-white transition-smooth">$$</button>
-                                <button class="px-2 py-1 text-sm bg-gray-100 text-text-secondary rounded hover:bg-primary hover:text-white transition-smooth">$$$</button>
-                                <button class="px-2 py-1 text-sm bg-gray-100 text-text-secondary rounded hover:bg-primary hover:text-white transition-smooth">$$$$</button>
+                                <button class="px-2 py-1 text-sm bg-primary text-white rounded hover:bg-primary-600 transition-smooth">?</button>
+                                <button class="px-2 py-1 text-sm bg-gray-100 text-text-secondary rounded hover:bg-primary hover:text-white transition-smooth">??</button>
+                                <button class="px-2 py-1 text-sm bg-gray-100 text-text-secondary rounded hover:bg-primary hover:text-white transition-smooth">???</button>
+                                <button class="px-2 py-1 text-sm bg-gray-100 text-text-secondary rounded hover:bg-primary hover:text-white transition-smooth">????</button>
                             </div>
                         </div>
 
@@ -230,10 +230,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$15 min</span>
+                                <span class="text-text-secondary">?15 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$</span>
+                        <span class="text-sm font-medium text-text-primary">??</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -283,10 +283,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$12 min</span>
+                                <span class="text-text-secondary">?12 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$</span>
+                        <span class="text-sm font-medium text-text-primary">??</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -336,10 +336,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$25 min</span>
+                                <span class="text-text-secondary">?25 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$$</span>
+                        <span class="text-sm font-medium text-text-primary">???</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -385,10 +385,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$10 min</span>
+                                <span class="text-text-secondary">?10 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$</span>
+                        <span class="text-sm font-medium text-text-primary">?</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -434,10 +434,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$18 min</span>
+                                <span class="text-text-secondary">?18 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$</span>
+                        <span class="text-sm font-medium text-text-primary">??</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -483,10 +483,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$14 min</span>
+                                <span class="text-text-secondary">?14 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$</span>
+                        <span class="text-sm font-medium text-text-primary">??</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -532,10 +532,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$35 min</span>
+                                <span class="text-text-secondary">?35 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$$$</span>
+                        <span class="text-sm font-medium text-text-primary">????</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
@@ -581,10 +581,10 @@
                                 <svg class="w-4 h-4 text-text-secondary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span class="text-text-secondary">$20 min</span>
+                                <span class="text-text-secondary">?20 min</span>
                             </div>
                         </div>
-                        <span class="text-sm font-medium text-text-primary">$$$</span>
+                        <span class="text-sm font-medium text-text-primary">???</span>
                     </div>
                     <a href="restaurant_menu.html" class="block w-full mt-4 bg-primary text-white py-2 rounded-lg hover:bg-primary-600 transition-smooth btn-hover text-center">
                         View Menu
