--- a/pages/restaurants/restaurant_menu.html
+++ b/pages/restaurants/restaurant_menu.html
@@ -78,7 +78,7 @@
                             <span class="hidden sm:inline">•</span>
                             <span>Italian • Pizza</span>
                             <span class="hidden sm:inline">•</span>
-                            <span>$$</span>
+                            <span>??</span>
                         </div>
                         <div class="flex flex-wrap items-center gap-2 sm:gap-4 mt-2 text-xs sm:text-sm">
                             <div class="flex items-center space-x-1 text-text-secondary">
@@ -91,7 +91,7 @@
                                 <svg class="w-3 h-3 sm:w-4 sm:h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"/>
                                 </svg>
-                                <span>$15 min</span>
+                                <span>?15 min</span>
                             </div>
                             <div class="flex items-center space-x-1 text-success">
                                 <svg class="w-3 h-3 sm:w-4 sm:h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -161,7 +161,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Margherita Pizza</h3>
                                     <p class="text-sm text-text-secondary mb-3">Fresh mozzarella, tomato sauce, basil</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$18.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?18.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -181,7 +181,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Pepperoni Pizza</h3>
                                     <p class="text-sm text-text-secondary mb-3">Pepperoni, mozzarella, tomato sauce</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$21.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?21.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -201,7 +201,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Vegetarian Deluxe</h3>
                                     <p class="text-sm text-text-secondary mb-3">Bell peppers, mushrooms, olives, onions</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$19.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?19.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -221,7 +221,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Hawaiian Pizza</h3>
                                     <p class="text-sm text-text-secondary mb-3">Ham, pineapple, mozzarella</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$20.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?20.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -247,7 +247,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Garlic Bread</h3>
                                     <p class="text-sm text-text-secondary mb-3">6 pieces, served with marinara sauce</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$7.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?7.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -267,7 +267,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Mozzarella Sticks</h3>
                                     <p class="text-sm text-text-secondary mb-3">6 pieces with marinara sauce</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$8.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?8.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -293,7 +293,7 @@
                                     <h3 class="text-base sm:text-lg font-semibold text-text-primary mb-1">Caesar Salad</h3>
                                     <p class="text-sm text-text-secondary mb-3">Romaine lettuce, croutons, parmesan, caesar dressing</p>
                                     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
-                                        <span class="text-lg sm:text-xl font-bold text-text-primary">$11.99</span>
+                                        <span class="text-lg sm:text-xl font-bold text-text-primary">?11.99</span>
                                         <button onclick="addToCart(this)" class="w-full sm:w-auto px-4 py-2 bg-primary text-white text-sm rounded-lg hover:bg-primary-600 transition-smooth btn-hover">
                                             Add to Cart
                                         </button>
@@ -317,7 +317,7 @@
                 <span class="font-medium">View Cart</span>
                 <span class="bg-primary-600 px-2 py-1 rounded text-sm">3</span>
             </div>
-            <span class="font-bold">$60.03</span>
+            <span class="font-bold">?60.03</span>
         </a>
     </div>
 
@@ -371,7 +371,7 @@
         function addToCart(button) {
             const itemCard = button.closest('.bg-surface');
             const itemName = itemCard.querySelector('h3').textContent;
-            const itemPrice = itemCard.querySelector('.font-bold').textContent.replace('$', '');
+            const itemPrice = itemCard.querySelector('.font-bold').textContent.replace('?', '');
             
             // Show feedback
             button.textContent = 'Added!';
