--- a/pages/restaurants/restaurant_menu_management.html
+++ b/pages/restaurants/restaurant_menu_management.html
@@ -116,7 +116,7 @@
                     </div>
                     <p class="text-sm text-text-secondary mb-3">Fresh mozzarella, tomato sauce, basil</p>
                     <div class="flex items-center justify-between">
-                        <span class="text-lg font-bold text-text-primary">$18.99</span>
+                        <span class="text-lg font-bold text-text-primary">₱18.99</span>
                         <div class="flex gap-2">
                             <button class="text-success hover:text-success-600 transition-smooth text-sm">Available</button>
                             <button class="text-primary hover:text-primary-600 transition-smooth text-sm">Edit</button>
@@ -141,7 +141,7 @@
                     </div>
                     <p class="text-sm text-text-secondary mb-3">Pepperoni, mozzarella, tomato sauce</p>
                     <div class="flex items-center justify-between">
-                        <span class="text-lg font-bold text-text-primary">$21.99</span>
+                        <span class="text-lg font-bold text-text-primary">₱21.99</span>
                         <div class="flex gap-2">
                             <button class="text-warning hover:text-warning-600 transition-smooth text-sm">Unavailable</button>
                             <button class="text-primary hover:text-primary-600 transition-smooth text-sm">Edit</button>
@@ -166,7 +166,7 @@
                     </div>
                     <p class="text-sm text-text-secondary mb-3">Bell peppers, mushrooms, olives, onions</p>
                     <div class="flex items-center justify-between">
-                        <span class="text-lg font-bold text-text-primary">$19.99</span>
+                        <span class="text-lg font-bold text-text-primary">₱19.99</span>
                         <div class="flex gap-2">
                             <button class="text-success hover:text-success-600 transition-smooth text-sm">Make Available</button>
                             <button class="text-primary hover:text-primary-600 transition-smooth text-sm">Edit</button>
@@ -191,7 +191,7 @@
                     </div>
                     <p class="text-sm text-text-secondary mb-3">6 pieces, served with marinara sauce</p>
                     <div class="flex items-center justify-between">
-                        <span class="text-lg font-bold text-text-primary">$7.99</span>
+                        <span class="text-lg font-bold text-text-primary">₱7.99</span>
                         <div class="flex gap-2">
                             <button class="text-success hover:text-success-600 transition-smooth text-sm">Available</button>
                             <button class="text-primary hover:text-primary-600 transition-smooth text-sm">Edit</button>
