--- a/pages/customers/checkout.html
+++ b/pages/customers/checkout.html
@@ -187,7 +187,7 @@
                                  onerror="this.src='https://images.unsplash.com/photo-1584824486509-112e4181ff6b?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'; this.onerror=null;">
                             <div>
                                 <h4 class="font-semibold text-text-primary">Pizza Palace</h4>
-                                <p class="text-sm text-text-secondary">25-35 min • $2.99 delivery</p>
+                                <p class="text-sm text-text-secondary">25-35 min • ?2.99 delivery</p>
                             </div>
                         </div>
                     </div>
@@ -198,15 +198,15 @@
                         <div class="space-y-3">
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Margherita Pizza x1</span>
-                                <span class="text-text-primary">$18.99</span>
+                                <span class="text-text-primary">?18.99</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Caesar Salad x2</span>
-                                <span class="text-text-primary">$23.98</span>
+                                <span class="text-text-primary">?23.98</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Garlic Bread x1</span>
-                                <span class="text-text-primary">$7.99</span>
+                                <span class="text-text-primary">?7.99</span>
                             </div>
                         </div>
                     </div>
@@ -216,24 +216,24 @@
                         <div class="space-y-2 mb-4">
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Subtotal</span>
-                                <span class="text-text-primary">$50.96</span>
+                                <span class="text-text-primary">?50.96</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Delivery fee</span>
-                                <span class="text-text-primary">$2.99</span>
+                                <span class="text-text-primary">?2.99</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Service fee</span>
-                                <span class="text-text-primary">$1.50</span>
+                                <span class="text-text-primary">?1.50</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Tax</span>
-                                <span class="text-text-primary">$4.58</span>
+                                <span class="text-text-primary">?4.58</span>
                             </div>
                             <div class="border-t border-border pt-2 mt-2">
                                 <div class="flex justify-between">
                                     <span class="font-semibold text-text-primary">Total</span>
-                                    <span class="font-bold text-text-primary text-lg">$60.03</span>
+                                    <span class="font-bold text-text-primary text-lg">?60.03</span>
                                 </div>
                             </div>
                         </div>
