--- a/pages/customers/customer_registration.html
+++ b/pages/customers/customer_registration.html
@@ -27,9 +27,6 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
                     <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse Restaurants</a>
-                    <a href="order_tracking.html" class="text-text-secondary hover:text-primary transition-smooth">Track Orders</a>
-                    <a href="customer_registration.html" class="text-primary font-medium border-b-2 border-primary pb-1">Sign Up</a>
-                </nav>
 
                 <!-- Login Link -->
                 <div class="flex items-center space-x-4">
@@ -364,7 +361,7 @@
                 const email = this.value;
                 const emailError = document.getElementById('emailError');
                 const emailSuccess = document.getElementById('emailSuccess');
-                const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+                const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+?/;
 
                 if (email && emailRegex.test(email)) {
                     emailError.classList.add('hidden');
@@ -387,9 +384,9 @@
             document.getElementById('phone').addEventListener('input', function() {
                 let value = this.value.replace(/\D/g, '');
                 if (value.length >= 6) {
-                    value = value.replace(/(\d{3})(\d{3})(\d{4})/, '($1) $2-$3');
+                    value = value.replace(/(\d{3})(\d{3})(\d{4})/, '(?1) ?2-?3');
                 } else if (value.length >= 3) {
-                    value = value.replace(/(\d{3})(\d{0,3})/, '($1) $2');
+                    value = value.replace(/(\d{3})(\d{0,3})/, '(?1) ?2');
                 }
                 this.value = value;
             });
@@ -465,7 +462,7 @@
                 }
 
                 // Validate email
-                const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+                const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+?/;
                 if (!email || !emailRegex.test(email)) {
                     document.getElementById('emailError').classList.remove('hidden');
                     isValid = false;
@@ -541,8 +538,8 @@
                     element.classList.add(colors[Math.min(strength - 1, 3)]);
                 }
 
-                strengthText.textContent = `Password strength: ${labels[strength]}`;
-                strengthText.className = `text-xs mt-1 ${strength < 2 ? 'text-error' : strength < 3 ? 'text-warning' : strength < 4 ? 'text-accent' : 'text-success'}`;
+                strengthText.textContent = `Password strength: ?{labels[strength]}`;
+                strengthText.className = `text-xs mt-1 ?{strength < 2 ? 'text-error' : strength < 3 ? 'text-warning' : strength < 4 ? 'text-accent' : 'text-success'}`;
             }
         });
     </script>
