--- a/pages/customers/order_history.html
+++ b/pages/customers/order_history.html
@@ -89,7 +89,7 @@
                             <span>Placed on Jan 15, 2024 at 2:45 PM</span>
                         </div>
                         <div class="text-sm text-text-secondary">
-                            <p>3 items • $60.03</p>
+                            <p>3 items • ?60.03</p>
                         </div>
                     </div>
                     <div class="flex flex-col sm:flex-row gap-2">
@@ -123,7 +123,7 @@
                             <span>Placed on Jan 12, 2024 at 7:30 PM</span>
                         </div>
                         <div class="text-sm text-text-secondary">
-                            <p>2 items • $28.50</p>
+                            <p>2 items • ?28.50</p>
                         </div>
                     </div>
                     <div class="flex flex-col sm:flex-row gap-2">
@@ -157,7 +157,7 @@
                             <span>Placed on Jan 10, 2024 at 6:15 PM</span>
                         </div>
                         <div class="text-sm text-text-secondary">
-                            <p>4 items • $45.75</p>
+                            <p>4 items • ?45.75</p>
                         </div>
                     </div>
                     <div class="flex flex-col sm:flex-row gap-2">
@@ -191,7 +191,7 @@
                             <span>Placed on Jan 8, 2024 at 12:30 PM</span>
                         </div>
                         <div class="text-sm text-text-secondary">
-                            <p>2 items • $22.40</p>
+                            <p>2 items • ?22.40</p>
                         </div>
                     </div>
                     <div class="flex flex-col sm:flex-row gap-2">
