--- a/pages/customers/order_tracking.html
+++ b/pages/customers/order_tracking.html
@@ -278,7 +278,7 @@
                                 </div>
                             </div>
                             <div class="text-right">
-                                <div class="font-medium text-text-primary">$18.99</div>
+                                <div class="font-medium text-text-primary">?18.99</div>
                                 <div class="text-sm text-text-secondary">Qty: 1</div>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
                             <div class="text-right">
-                                <div class="font-medium text-text-primary">$12.99</div>
+                                <div class="font-medium text-text-primary">?12.99</div>
                                 <div class="text-sm text-text-secondary">Qty: 1</div>
                             </div>
                         </div>
@@ -305,19 +305,19 @@
                     <div class="space-y-2 pt-4 border-t border-border">
                         <div class="flex justify-between text-sm">
                             <span class="text-text-secondary">Subtotal</span>
-                            <span class="text-text-primary">$31.98</span>
+                            <span class="text-text-primary">?31.98</span>
                         </div>
                         <div class="flex justify-between text-sm">
                             <span class="text-text-secondary">Delivery Fee</span>
-                            <span class="text-text-primary">$3.99</span>
+                            <span class="text-text-primary">?3.99</span>
                         </div>
                         <div class="flex justify-between text-sm">
                             <span class="text-text-secondary">Tax</span>
-                            <span class="text-text-primary">$2.88</span>
+                            <span class="text-text-primary">?2.88</span>
                         </div>
                         <div class="flex justify-between font-semibold text-lg pt-2 border-t border-border">
                             <span class="text-text-primary">Total</span>
-                            <span class="text-text-primary">$38.85</span>
+                            <span class="text-text-primary">?38.85</span>
                         </div>
                     </div>
                 </div>
