--- a/pages/customers/payment_confirmation.html
+++ b/pages/customers/payment_confirmation.html
@@ -69,21 +69,21 @@
                             <span class="text-text-primary font-medium">Margherita Pizza</span>
                             <span class="text-text-secondary text-sm ml-2">x1</span>
                         </div>
-                        <span class="text-text-primary">$18.99</span>
+                        <span class="text-text-primary">?18.99</span>
                     </div>
                     <div class="flex justify-between">
                         <div>
                             <span class="text-text-primary font-medium">Caesar Salad</span>
                             <span class="text-text-secondary text-sm ml-2">x2</span>
                         </div>
-                        <span class="text-text-primary">$23.98</span>
+                        <span class="text-text-primary">?23.98</span>
                     </div>
                     <div class="flex justify-between">
                         <div>
                             <span class="text-text-primary font-medium">Garlic Bread</span>
                             <span class="text-text-secondary text-sm ml-2">x1</span>
                         </div>
-                        <span class="text-text-primary">$7.99</span>
+                        <span class="text-text-primary">?7.99</span>
                     </div>
                 </div>
             </div>
@@ -109,23 +109,23 @@
                 <div class="space-y-2 text-sm mb-4">
                     <div class="flex justify-between">
                         <span class="text-text-secondary">Subtotal</span>
-                        <span class="text-text-primary">$50.96</span>
+                        <span class="text-text-primary">?50.96</span>
                     </div>
                     <div class="flex justify-between">
                         <span class="text-text-secondary">Delivery fee</span>
-                        <span class="text-text-primary">$2.99</span>
+                        <span class="text-text-primary">?2.99</span>
                     </div>
                     <div class="flex justify-between">
                         <span class="text-text-secondary">Service fee</span>
-                        <span class="text-text-primary">$1.50</span>
+                        <span class="text-text-primary">?1.50</span>
                     </div>
                     <div class="flex justify-between">
                         <span class="text-text-secondary">Tax</span>
-                        <span class="text-text-primary">$4.58</span>
+                        <span class="text-text-primary">?4.58</span>
                     </div>
                     <div class="flex justify-between font-semibold text-lg pt-2 border-t border-border">
                         <span class="text-text-primary">Total Paid</span>
-                        <span class="text-text-primary">$60.03</span>
+                        <span class="text-text-primary">?60.03</span>
                     </div>
                 </div>
                 <div class="flex items-center space-x-2 text-sm text-text-secondary">
