--- a/pages/customers/shopping_cart.html
+++ b/pages/customers/shopping_cart.html
@@ -87,7 +87,7 @@
                             <span class="text-text-secondary text-sm">•</span>
                             <span class="text-text-secondary text-sm">25-35 min</span>
                             <span class="text-text-secondary text-sm">•</span>
-                            <span class="text-text-secondary text-sm">$2.99 delivery</span>
+                            <span class="text-text-secondary text-sm">?2.99 delivery</span>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                                         </button>
                                     </div>
                                     <div class="text-right">
-                                        <p class="font-semibold text-text-primary">$18.99</p>
+                                        <p class="font-semibold text-text-primary">?18.99</p>
                                     </div>
                                 </div>
                             </div>
@@ -189,8 +189,8 @@
                                         </button>
                                     </div>
                                     <div class="text-right">
-                                        <p class="font-semibold text-text-primary">$23.98</p>
-                                        <p class="text-text-secondary text-sm">$11.99 each</p>
+                                        <p class="font-semibold text-text-primary">?23.98</p>
+                                        <p class="text-text-secondary text-sm">?11.99 each</p>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +235,7 @@
                                         </button>
                                     </div>
                                     <div class="text-right">
-                                        <p class="font-semibold text-text-primary">$7.99</p>
+                                        <p class="font-semibold text-text-primary">?7.99</p>
                                     </div>
                                 </div>
                             </div>
@@ -302,24 +302,24 @@
                         <div class="space-y-3">
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Subtotal (3 items)</span>
-                                <span class="text-text-primary">$50.96</span>
+                                <span class="text-text-primary">?50.96</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Delivery fee</span>
-                                <span class="text-text-primary">$2.99</span>
+                                <span class="text-text-primary">?2.99</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Service fee</span>
-                                <span class="text-text-primary">$1.50</span>
+                                <span class="text-text-primary">?1.50</span>
                             </div>
                             <div class="flex justify-between text-sm">
                                 <span class="text-text-secondary">Tax</span>
-                                <span class="text-text-primary">$4.58</span>
+                                <span class="text-text-primary">?4.58</span>
                             </div>
                             <div class="border-t border-border pt-3">
                                 <div class="flex justify-between">
                                     <span class="font-semibold text-text-primary">Total</span>
-                                    <span class="font-bold text-text-primary text-lg">$60.03</span>
+                                    <span class="font-bold text-text-primary text-lg">?60.03</span>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                         <!-- Checkout Button -->
                         <a href="checkout.html" class="block w-full bg-primary text-white py-3 rounded-lg font-semibold mt-6 hover:bg-primary-600 transition-smooth btn-hover flex items-center justify-center space-x-2">
                             <span>Proceed to Checkout</span>
-                            <span class="bg-primary-600 px-2 py-1 rounded text-sm">$60.03</span>
+                            <span class="bg-primary-600 px-2 py-1 rounded text-sm">?60.03</span>
                         </a>
 
                         <!-- Payment Methods Preview -->
