--- a/pages/delivery/rider_orders.html
+++ b/pages/delivery/rider_orders.html
@@ -131,7 +131,7 @@
                 <div class="flex items-center justify-between">
                     <div>
                         <p class="text-text-secondary text-sm font-medium">Today's Earnings</p>
-                        <p class="text-2xl font-bold text-text-primary mt-1">$142.50</p>
+                        <p class="text-2xl font-bold text-text-primary mt-1">?142.50</p>
                         <div class="flex items-center mt-2">
                             <svg class="w-4 h-4 text-success mr-1" fill="currentColor" viewBox="0 0 20 20">
                                 <path fill-rule="evenodd" d="M5.293 9.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 7.414V15a1 1 0 11-2 0V7.414L6.707 9.707a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
@@ -198,8 +198,8 @@
                         </div>
 
                         <div class="flex items-center justify-between text-sm">
-                            <span class="font-medium text-text-primary">Order Total: $34.99</span>
-                            <span class="text-text-secondary">Est. Earnings: $8.50</span>
+                            <span class="font-medium text-text-primary">Order Total: ?34.99</span>
+                            <span class="text-text-secondary">Est. Earnings: ?8.50</span>
                         </div>
                     </div>
 
@@ -244,8 +244,8 @@
                         </div>
 
                         <div class="flex items-center justify-between text-sm">
-                            <span class="font-medium text-text-primary">Order Total: $28.50</span>
-                            <span class="text-text-secondary">Est. Earnings: $7.25</span>
+                            <span class="font-medium text-text-primary">Order Total: ?28.50</span>
+                            <span class="text-text-secondary">Est. Earnings: ?7.25</span>
                         </div>
                     </div>
 
@@ -290,8 +290,8 @@
                         </div>
 
                         <div class="flex items-center justify-between text-sm">
-                            <span class="font-medium text-text-primary">Order Total: $22.75</span>
-                            <span class="text-text-secondary">Est. Earnings: $9.75</span>
+                            <span class="font-medium text-text-primary">Order Total: ?22.75</span>
+                            <span class="text-text-secondary">Est. Earnings: ?9.75</span>
                         </div>
                     </div>
 
