--- a/pages/restaurants/restaurant_profile.html
+++ b/pages/restaurants/restaurant_profile.html
@@ -140,10 +140,10 @@ United States</textarea>
                             <div>
                                 <label class="block text-sm font-medium text-text-primary mb-2">Price Range</label>
                                 <select class="w-full border border-border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent">
-                                    <option>$$</option>
-                                    <option>$</option>
-                                    <option>$$$</option>
-                                    <option>$$$$</option>
+                                    <option>??</option>
+                                    <option>?</option>
+                                    <option>???</option>
+                                    <option>????</option>
                                 </select>
                             </div>
                         </div>
@@ -220,7 +220,7 @@ United States</textarea>
                                        class="w-full border border-border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent">
                             </div>
                             <div>
-                                <label class="block text-sm font-medium text-text-primary mb-2">Minimum Order ($)</label>
+                                <label class="block text-sm font-medium text-text-primary mb-2">Minimum Order (?)</label>
                                 <input type="number"
                                        value="15"
                                        class="w-full border border-border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent">
@@ -228,7 +228,7 @@ United States</textarea>
                         </div>
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                             <div>
-                                <label class="block text-sm font-medium text-text-primary mb-2">Delivery Fee ($)</label>
+                                <label class="block text-sm font-medium text-text-primary mb-2">Delivery Fee (?)</label>
                                 <input type="number"
                                        step="0.01"
                                        value="2.99"
